# spacy-go-wrapper

./: CMakeLists.txt  README.md  go.mod  test.go
splitter/: splitter.cpp  splitter.go  splitter.h
